# dataselectie-proxy

./: README.md  docker-compose.yml
.github/workflows/: build-aks-image.yml  pre-commit.yml  test.yaml
src/: Dockerfile  manage.py  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg
src/dataselectie_proxy/: settings.py  urls.py  wsgi.py
src/dataselectie_proxy/search/: clients.py  exceptions.py  indexes.py  permissions.py  urls.py  views.py
src/tests/: conftest.py  settings.py  utils.py
src/tests/test_search/: test_views.py
