[metadata]
name = dataselectie-proxy
version = 0.1
description = Proxy service and authorization checks for our Azure Search Service
long_description = Proxy service and authorization checks for our Azure Search Service
url = https://api.data.amsterdam.nl/dataselectie/
author = Amsterdam Datapunt
author_email = datapunt@amsterdam.nl
license = European Union Public Licence v1.2
classifiers =
    Environment :: Web Environment
Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: European Union Public Licence
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
[options]
include_package_data = true
packages =
    dataselectie_proxy
